--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Monika",
-	"name": "replace",
-	"version": "0.1.1",
+	"name": "replace-string",
+	"version": "1.1.1",
 	"description": "Replaces words from string",
 	"main": "replacestring",
 	"dependencies": {},
